--- a/Projectcs131-3/Projectcs131-3.vcxproj
+++ b/Projectcs131-3/Projectcs131-3.vcxproj
@@ -145,7 +145,9 @@
     <ClCompile Include="MainAmortization.c" />
   </ItemGroup>
   <ItemGroup>
-    <Library Include="..\Debug\Amort.lib" />
+    <ProjectReference Include="..\Amort\Amort.vcxproj">
+      <Project>{44551d80-2c7a-4a9d-b768-447c9837920e}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
