--- a/Projectcs131-3/Projectcs131-3.vcxproj
+++ b/Projectcs131-3/Projectcs131-3.vcxproj
@@ -142,12 +142,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Amort.c" />
     <ClCompile Include="MainAmortization.c" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Amort\Amort.vcxproj">
       <Project>{44551d80-2c7a-4a9d-b768-447c9837920e}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Amort.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
