finish function number 4

--- a/Projectcs131-3/Projectcs131-3.vcxproj
+++ b/Projectcs131-3/Projectcs131-3.vcxproj
@@ -149,6 +149,9 @@
       <Project>{44551d80-2c7a-4a9d-b768-447c9837920e}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MainAmortization.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
