--- a/Projectcs131-3/Projectcs131-3.vcxproj.filters
+++ b/Projectcs131-3/Projectcs131-3.vcxproj.filters
@@ -24,4 +24,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Library Include="..\x64\Debug\Amort.lib">
+      <Filter>Source Files</Filter>
+    </Library>
+  </ItemGroup>
 </Project>
