--- a/Projectcs131-3/Projectcs131-3.vcxproj
+++ b/Projectcs131-3/Projectcs131-3.vcxproj
@@ -152,6 +152,9 @@
   <ItemGroup>
     <ClInclude Include="MainAmortization.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Library Include="..\Release\Amort.lib" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
