--- a/Projectcs131-3/Projectcs131-3.vcxproj.filters
+++ b/Projectcs131-3/Projectcs131-3.vcxproj.filters
@@ -24,4 +24,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Library Include="..\Release\Amort.lib" />
+  </ItemGroup>
 </Project>
